<resources>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_name">SuM Manga</string>
    <string name="app_version_Raw">5.8.9</string>
    <string name="app_version">V-5.8.9</string>
    <string name="app_info_txt">This is a temporary app it will be removed soon!</string>
    <string name="app_navigate_back">Navigate Back</string>
    <string name="shortcut_explore">explore</string>
    <string name="shortcut_settings">settings</string>
    <string name="shortcut_library">library</string>
    <string name="shortcut_hits">hits</string>
    <string name="shortcut_search">search</string>
    <string-array name="sumgenreflexmenu">
        <item>Action</item>
        <item>Drama</item>
        <item>Slice of Life</item>
        <item>Sci-Fi</item>
        <item>Mystery</item>
        <item>Supernatural</item>
        <item>Comedy</item>
        <item>Fantasy</item>
    </string-array>
</resources>