<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/SuMMenuLayoutBG"
        android:background="#000000"
        android:alpha="0.64"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <RelativeLayout
        android:id="@+id/SuMMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:gravity="center"
        android:background="@android:color/transparent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/SuMMenuLayout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <View
                    app:layout_constraintBottom_toBottomOf="@id/SuMMenuLayout"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/ic_info_white_36dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="52dp"
                    android:layout_height="52dp" />

                <LinearLayout
                    android:id="@+id/InfoTXTCont0"
                    android:orientation="vertical"
                    android:layout_marginStart="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/white"
                            android:text="@string/app_name"
                            android:fontFamily="@font/varela_round"
                            android:textSize="28sp"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textColor="@color/white"
                            android:text="@string/app_version"
                            android:fontFamily="@font/varela_round"
                            android:textSize="18sp"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="4dp"
                            android:alpha="0.64"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <TextView
                        android:textColor="@color/white"
                        android:text="@string/app_info_txt"
                        android:fontFamily="@font/varela_round"
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="0dp"
                        android:alpha="0.64"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@id/InfoTXTCont0"
                        app:layout_constraintStart_toStartOf="@id/InfoTXTCont0"
                        tools:ignore="SmallSp" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>